# encde

./: Cargo.toml  README.md  index.html  styles.css
.github/workflows/: release.yml  rust.yml
.github/workflows/scripts/: make-release-asset.sh
src/: app.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
