[package]
name = "encde"
version = "0.0.0"
description = "Encde"
authors = ["nabbisen"]
license = "Apache-2.0"
repository = "https://github.com/nabbisen/encde"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

base64 = "0.21.7"
html-escape = "0.2.13"
#hashes = "0.1.9"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
